cluster/apps/applications/adminer/deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: adminer
spec:
  replicas: 1
  revisionHistoryLimit: 0
  template:
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - name: adminer
          image: adminer:4.8.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 300
            successThreshold: 1
            timeoutSeconds: 5
