cluster/apps/applications/adminer/service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: adminer
spec:
  selector:
    app: adminer
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
