cluster/apps/applications/adminer/ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: adminer
  annotations:
    external-dns.alpha.kubernetes.io/hostname: adminer.home.es.
    external-dns.alpha.kubernetes.io/target: home.es.
spec:
  rules:
    - host: adminer.home.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adminer
                port:
                  name: http
